--- a/style.css
+++ b/style.css
@@ -20,25 +20,39 @@ p {
 }
 
 canvas {
+  position: absolute;
   border: 1px solid azure;
+  width: 100%;
+  height: 100%;
+}
+
+#simulationContainer {
+  position: relative;
+  border: 2px solid red;
+}
+
+#fps {
+  margin: 1em;
+  position: absolute;
+  color: white;
 }
 
 @media only screen and (max-width: 600px) {
-  canvas {
+  #simulationContainer {
     width: 80%;
     aspect-ratio: 1/1;
   }
 }
 
 @media only screen and (min-width: 600px) {
-  canvas {
+  #simulationContainer {
     height: 60%;
     aspect-ratio: 1/1;
   }
 }
 
 @media only screen and (min-width: 1000px) {
-  canvas {
+  #simulationContainer {
     height: 80%;
     aspect-ratio: 1/1;
   }
